syntax = "proto3";

package overlock.crossplane.v1beta1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "overlock/crossplane/v1beta1/environment.proto";
import "overlock/crossplane/v1beta1/metadata.proto";

option go_package = "github.com/overlock-network/api/go/node/overlock/crossplane/v1beta1";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  // CreateEnvironment
  rpc CreateEnvironment(MsgCreateEnvironment) returns (MsgCreateEnvironmentResponse);

  // UpdateEnvironment
  rpc UpdateEnvironment(MsgUpdateEnvironment) returns (MsgUpdateEnvironmentResponse);

  // DeleteEnvironment
  rpc DeleteEnvironment(MsgDeleteEnvironment) returns (MsgDeleteEnvironmentResponse);

  // CreateProvider
  rpc CreateProvider(MsgCreateProvider) returns (MsgCreateProviderResponse);

  // UpdateProvider
  rpc UpdateProvider(MsgUpdateProvider) returns (MsgUpdateProviderResponse);

  // DeleteProvider
  rpc DeleteProvider(MsgDeleteProvider) returns (MsgDeleteProviderResponse);
}

// MsgCreateEnvironment
message MsgCreateEnvironment {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  Metadata metadata = 3;
  uint64 provider = 4;
}

// MsgCreateEnvironmentResponse
message MsgCreateEnvironmentResponse {
  uint64 id = 1;
}

// MsgUpdateEnvironment
message MsgUpdateEnvironment {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
  Metadata metadata = 3;
  uint64 provider = 4;
}

// MsgUpdateEnvironmentResponse
message MsgUpdateEnvironmentResponse {
  uint64 id = 1;
}

// MsgDeleteEnvironment
message MsgDeleteEnvironment {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
}

// MsgDeleteEnvironmentResponse
message MsgDeleteEnvironmentResponse {}

// MsgCreateProvider
message MsgCreateProvider {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  Metadata metadata = 2;
  string ip = 3;
  uint32 port = 4;
  string country_code = 5;
  string environment_type = 6;
  string availability = 7;
  google.protobuf.Timestamp register_time = 8 [(gogoproto.stdtime) = true];
}

// MsgCreateProviderResponse
message MsgCreateProviderResponse {
  uint64 id = 1;
}

// MsgUpdateProvider
message MsgUpdateProvider {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
  Metadata metadata = 3;
  string ip = 4;
  uint32 port = 5;
  string country_code = 6;
  string environment_type = 7;
  string availability = 8;
  google.protobuf.Timestamp register_time = 9 [(gogoproto.stdtime) = true];
}

// MsgUpdateProviderResponse
message MsgUpdateProviderResponse {
  uint64 id = 1;
}

// MsgDeleteProvider
message MsgDeleteProvider {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id = 2;
}

// MsgDeleteProviderResponse
message MsgDeleteProviderResponse {}
